# bullbot-telegram

./: .gitignore  CLAUDE.md  Dockerfile  INTEGRATION.md  README.md  SEPARATION_SUMMARY.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: configuracoes-globais.md  sistema-confluencia.md  telegram-bot-integration.md  telegram-commands.md
src/: __init__.py  main.py
src/database/: __init__.py  connection.py  models.py
src/integrations/: __init__.py  telegram_bot.py  telegram_handlers.py  telegram_messages.py
src/services/: signal_dispatch_service.py  signal_reader.py  user_config_service.py
src/tasks/: __init__.py  beat_schedule.py  celery_app.py  monitor_tasks.py  telegram_tasks.py
src/utils/: __init__.py  config.py  logger.py  price_formatter.py
